# alf0nso.github.io

./: .gitignore  404.html  Afonso.cabal  CNAME  README.org  ab.html  about.html  archive.html  contact.html  cv.html  home.html  index.html  index.xml  now.html  site.hs  sitemap.xml
CV/: resume.tex
_site/: archive.html  contact.html
_site/css/: gafanhoto.css
_site/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
about/: index.html
bib/: global.bib
categories/: index.html  index.xml
css/: custom.css  gafanhoto.css
docs/: 17032023.html  ab.html  about.html  archive.html  contact.html  cv.html  index.html  now.html  publickey.html  signmessage.html  test.html
docs/Alf0nso/: index.html
docs/css/: gafanhoto.css
docs/docs/: gafanhoto.asc  gafanhoto.txt
docs/js/: laura.js
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  test.html
images/: grasshopper.png.metadata
main/: 17032023.org  ab.org  about.org  contact.org  cv.org  home.org  index.org  now.org  publickey.org  signmessage.org
mastersposter/: index.html
mposter/: index.html
p5Drawing/: main.css  main.html  sketch.js
pgp/: index.html
post/: index.html  index.xml
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  test.org
site/: archive.html  cv.html  now.html
tags/: index.html  index.xml
templates/: archive.html  default.html  post-list.html  post.html
(+19 files in other folders)
